--- a/assets/less/disp/comments.less
+++ b/assets/less/disp/comments.less
@@ -39,11 +39,14 @@
                             text-align: right;
                         }
                     }
+
+                    .login.user + .label {
+                        margin-right: 5px;
+                    }
                 }
 
                 .evo_status {
                     font-size: 1rem;
-                    margin-left: 5px;
                     border-radius: 0;
                 }
             }
